# spec2psm

./: .gitignore  README.md  pylint.cfg  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
config/: default_config.yaml  large_config.yaml  mods.yaml
scripts/: create_spec2pep_input.py  spec2psm_cli.py
spec2psm/: __init__.py  config.py  datasets.py  evaluate.py  inference.py  metrics.py  model.py  optimizer.py  parser.py  peptide.py  preprocess.py  tokenizer.py  train.py  utils.py
tests/: test_001_parse.py
