[metadata]
name = spec2psm
author = Trent Hinkle
author_email = trenth12@gmail.com
summary = Python Package for training, evaluating, and inference of a peptide spectrum to peptide sequence transformer model with pytorch.
description_file = README.md
home_page = https://github.com/thinkle12/spec2psm
version = 0.1.0
license = Apache-2
keywords =
    proteomics
[files]
packages =
    spec2psm
[pbr]
autodoc_tree_index_modules = True
autodoc_index_modules = True
[devpi:upload]
no-vcs = 1
with-docs = 1

[flake8]
max-line-length = 120
exclude = .git,.tox,.venv,doc,migrations